Fixed form on mobile and navbar background on scroll

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -381,7 +381,7 @@ input, textarea {
   #projects .col-sm-5 {
     width: 100%;
   }
-  .form {
+  .form-default {
     width: 100%;
   }
 }
